--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,8 @@
     "axios": "^1.9.0",
     "clsx": "^2.1.1",
     "i": "^0.3.7",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "jwt-decode": "^4.0.0",
     "npm": "^11.4.1",
     "react": "^19.1.0",
