--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,11 +24,13 @@
     "apexcharts": "^4.7.0",
     "axios": "^1.9.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "flatpickr": "^4.6.13",
     "i": "^0.3.7",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.525.0",
     "npm": "^11.4.1",
     "react": "^19.1.0",
     "react-apexcharts": "^1.7.0",
